# asura

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/asura/: asura.h  debug.hh  device.hh  font.hh  graphics.hh  log.h  resource.hh  sprite.hh  utils.h
include/asura/core/: log.h  math.hh  result.hh  utils.h
include/asura/core/math/: general.hh  mat4.hh  vec2.hh  vec3.hh  vec4.hh
include/asura/gfx/: debug.hh  device.hh  font.hh  graphics.hh  model.hh  resource.hh  sprite.hh
include/asura/gfx/shaders/: shader.glsl  shader.glsl.h
include/asura/shaders/: shader.glsl  shader.glsl.h
include/engine/: debug.hh  graphics.hh  resource.hh
include/engine/shaders/: instance.glsl  instance.glsl.h  model.glsl  model.glsl.h
src/: asura_sokol_impl.c  asura_sokol_impl.mm  debug.cc  font.cc  graphics.cc  model.cc  sprite.cc
